@@ -186,10 +186,9 @@ BAT *BATunique(BAT *b, BAT *s);
 BBPrec *BBP[N_BBPINIT];
 void BBPaddfarm(const char *dirname, int rolemask);
 void BBPclear(bat bid);
-int BBPdecref(bat b, int logical);
 BAT *BBPdescriptor(bat b);
+int BBPfix(bat b);
 int BBPin;
-int BBPincref(bat b, int logical);
 bat BBPindex(const char *nme);
 void BBPkeepref(bat i);
 bat BBPlimit;
@@ -199,11 +198,14 @@ int BBPout;
 str BBPphysical(bat b, str buf);
 BAT *BBPquickdesc(bat b, int delaccess);
 int BBPreclaim(BAT *b);
+int BBPrelease(bat b);
 int BBPrename(bat bid, const char *nme);
 void BBPresetfarms(void);
+int BBPretain(bat b);
 gdk_return BBPsave(BAT *b);
 void BBPshare(bat b);
 gdk_return BBPsync(int cnt, bat *subcommit);
+int BBPunfix(bat b);
 void BBPunlock(void);
 gdk_return BUNappend(BAT *b, const void *right, bit force);
 gdk_return BUNdelete(BAT *b, oid o);
