@@ -121,7 +121,7 @@ runFactory(Client cntxt, MalBlkPtr mb, MalBlkPtr mbcaller, MalStkPtr stk, InstrP
 		if (VALcopy(lhs, rhs) == NULL)
 			throw(MAL, "factory.call", MAL_MALLOC_FAIL);
 		if( lhs->vtype == TYPE_bat )
-			BBPincref(lhs->val.bval, TRUE);
+			BBPretain(lhs->val.bval);
 	}
 	if (mb->errors)
 		throw(MAL, "factory.call", PROGRAM_GENERAL);
@@ -205,7 +205,7 @@ callFactory(Client cntxt, MalBlkPtr mb, ValPtr argv[], char flag){
 		for (i = psig->retc; i < psig->argc; i++) {
 			lhs = &pl->stk->stk[psig->argv[i]];
 			if( lhs->vtype == TYPE_bat )
-				BBPdecref(lhs->val.bval, TRUE);
+				BBPrelease(lhs->val.bval);
 		}
 	}
 	/* copy the calling arguments onto the stack of the factory */
@@ -215,7 +215,7 @@ callFactory(Client cntxt, MalBlkPtr mb, ValPtr argv[], char flag){
 		if (VALcopy(lhs, argv[i]) == NULL)
 			throw(MAL, "factory.call", MAL_MALLOC_FAIL);
 		if( lhs->vtype == TYPE_bat )
-			BBPincref(lhs->val.bval, TRUE);
+			BBPretain(lhs->val.bval);
 	}
 	ret=  reenterMAL(cntxt, mb, pl->pc, -1, pl->stk);
 	/* garbage collect the string arguments, these positions
